tests/snapshots/parse_failure__valid_negative_integer.snap
---
source: tests/parse_failure.rs
expression: "format_output_snapshot(json, &annotated)"
---
case --- 
-298
stdout --- 
-298
stderr --- 
<empty>
